--- a/test/alertevent/index.html
+++ b/test/alertevent/index.html
@@ -9,8 +9,10 @@
     <script src="../../src/alertevent/alertevent.js" type="text/javascript"></script>
 
     <script>
-        var AE = gsc.alertevent.AE('http://geo.mapshakers.com:8080/CrowsSourcing');
+        // initialize alertevent object
+        var AE = gsc.alertevent.AE('http://geo.mapshakers.com:8080/CrowdSourcing');
 
+        // callback function which catch the error or print the results to a console
         function print(err,data){
             if (err){
                 console.error(err);
@@ -19,6 +21,34 @@
             console.log(data);
         }
 
+        // create unix uuid
+        function createUuidgen(){
+            return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function(c) {
+                var r = crypto.getRandomValues(new Uint8Array(1))[0]%16|0, v = c == 'x' ? r : (r&0x3|0x8);
+                return v.toString(16);
+            });
+        }
+
+
+        // create timestamp in format "YYYY-MM-DDTHH:mm:ss"
+        function getTimeStamp() {
+            var now = new Date();
+            return (now.getFullYear() + "-" +
+            (now.getMonth() + 1) + '-' +
+            (now.getDate()) + 'T' +
+            now.getHours() + ':' +
+            ((now.getMinutes() < 10)
+                    ? ("0" + now.getMinutes())
+                    : (now.getMinutes())) + ':' +
+            ((now.getSeconds() < 10)
+                    ? ("0" + now.getSeconds())
+                    : (now.getSeconds())));
+        }
+
+
+        /** LIBRARY FUNCTIONS **/
+
+        
         function getConfig() {
             AE.getConfig(print);
         }
@@ -27,24 +57,25 @@
         function eventComment(){
             var data = {
                 "user": {
-                    "id": "franta",
+                    "id": "Filip_"+createUuidgen(),
                     "email": "franta@nowhere.com"
                 },
                 "text": "A new comment",
-                "datetime": "$(date +'%Y-%m-%dT%H:%M:%SZ')"
+                "datetime":getTimeStamp()
             };
 
-            AE.eventComment(print,data);
+            var uuid = "5ed32063-45bd-4ac2-9f68-0bf8efa38814";
+            AE.eventComment(print,data,uuid);
         }
 
         function eventCreate1(){
 
             var data ={
-                "id": Math.round(Math.random()*100000),
+                "id":createUuidgen(),
                 "description": "An event with 1 attachment",
                 "media": [{"type": "image/jpeg", "uri": "test"}],
                 "user": {
-                    "id": "karel",
+                    "id": "Filip_"+createUuidgen(),
                     "email": "karel@unckle.com",
                     "role": "admin",
                     "organization": "family"
@@ -55,24 +86,28 @@
                     "crs": "epsg:4326"
                 },
                 "priority": "normal",
-                "datetime": $.now(),
-                "status": "created"
+                "datetime": getTimeStamp(),
+                "status": "created"n
             };
 
-            AE.eventCreate(print,data);
+            var request = new FormData();
+            request.append('event', JSON.stringify(data));
+            request.append('part://1', "@checkmark-512.png");
+
+            AE.eventCreate(print,request);
         }
 
         function eventCreate2(){
 
             var data ={
-                "id": Math.round(Math.random()*100000),
+                "id":createUuidgen(),
                 "description": "An event with 2 attachments",
                 "media": [
                     {"type": "image/jpeg", "uri": "test1"},
                     {"type": "image/jpeg", "uri": "test2"}
                 ],
                 "user": {
-                    "id": "karel",
+                    "id": "Filip_"+createUuidgen(),
                     "email": "karel@unckle.com",
                     "role": "admin",
                     "organization": "family"
@@ -83,12 +118,18 @@
                     "crs": "epsg:4326"
                 },
                 "priority": "normal",
-                "datetime": $.now(),
+                "datetime": getTimeStamp(),
                 "status": "created"
             };
 
-            AE.eventCreate(print,data);
+            var request = new FormData();
+            request.append('event', JSON.stringify(data));
+            request.append('part://1', "@checkmark-512.png");
+            request.append('part://2', "@checkmark-256.png");
+
+            AE.eventCreate(print,request);
         }
+
 
 
         function eventListFilterBbox(){
