add documentation string

--- a/test/alertevent/index.html
+++ b/test/alertevent/index.html
@@ -48,7 +48,7 @@
 
         /** LIBRARY FUNCTIONS **/
 
-        
+
         function getConfig() {
             AE.getConfig(print);
         }
@@ -87,7 +87,7 @@
                 },
                 "priority": "normal",
                 "datetime": getTimeStamp(),
-                "status": "created"n
+                "status": "created"
             };
 
             var request = new FormData();
