* Added separate markdown file as API reference front-page * Added documentation to auth namespace classes, members and method stubs * Removed redundant deps/ subdirectory from repository root   * all packages to be managed by npm (if possible)

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <div class="jumbotron">
       <div class="container">
         <h1>GeoSmartCity Client Side JavaScript Library API</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <p>gsc.js is a productivity library for rapid spatial web application development. The library builds on jQuery, OpenLayers 3 and invokes methods from an instance of the GeoSmartCity Hub</p>
+        <p><a class="btn btn-primary btn-lg" href="http://www.geosmartcity.eu" role="button">Visit project web site &raquo;</a></p>
       </div>
     </div>
 
