crows fix to crowd

--- a/test/cs/index.html
+++ b/test/cs/index.html
@@ -10,7 +10,7 @@
 
     <script>
         // initialize cs object
-        gsc.cs.url = 'http://geo.mapshakers.com:8080/CrowsSourcing';
+        gsc.cs.url = 'http://geo.mapshakers.com:8080/CrowdSourcing';
 
         // callback function which catch the error or print the results to a console
         function print(err,data){
