--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="col-md-4">
           <h2>Get the library</h2>
-          <p>gsc.js is being developed as a community effort on the social coding platform GitHub. It is released under a permissive Open Source Apache2 license and can be downloaded and used by anyone for any purpose.</p>
+          <p>gsc.js is being developed as a community effort on the social coding platform GitHub. It is released under a permissive Open Source EUPL v.1.1 licence and can be downloaded and used by anyone for any purpose.</p>
           <p><a class="btn btn-default" href="https://github.com/GeoSmartCity-CIP/gsc-client" role="button">Download from GitHub &raquo;</a></p>
         </div>
         <div class="col-md-4">
