Update of example page

--- a/examples/index.html
+++ b/examples/index.html
@@ -44,11 +44,11 @@
                 <div class="col-md-6">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            Example
+                            View browser map
                         </div>
                         <div class="panel-body">
-                            <p>Description of example</p>
-                            <p><a class="btn btn-default" href="#" role="button">Link to example &raquo;</a></p>
+                            <p>The module is part of enclosing gsc-client library and provides capabilities for viewing maps and the classic pan and zoom functions</p>
+                            <p><a class="btn btn-default" href="viewbrowsermap.html" role="button">Link to example &raquo;</a></p>
 
                         </div>
                     </div>
@@ -56,11 +56,11 @@
                 <div class="col-md-6">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            Example
+                            Info on feature
                         </div>
                         <div class="panel-body">
-                            <p>Description of example</p>
-                            <p><a class="btn btn-default" href="#" role="button">Link to example &raquo;</a></p>
+                            <p>The module is part of enclosing gsc-client library and provides the components to get info on a specific feature. The user clicks on a feature in the map, the application will open a table with the detailed information on this feature.</p>
+                            <p><a class="btn btn-default" href="infoonfeature.html" role="button">Link to example &raquo;</a></p>
 
                         </div>
                     </div>
@@ -68,11 +68,11 @@
                 <div class="col-md-6">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            Example
+                            Filter on attributes
                         </div>
                         <div class="panel-body">
-                            <p>Description of example</p>
-                            <p><a class="btn btn-default" href="#" role="button">Link to example &raquo;</a></p>
+                            <p>The module is part of enclosing gsc-client library and provides the components to make request that filter features on specific attributes.</p>
+                            <p><a class="btn btn-default" href="filteronattributes.html" role="button">Link to example &raquo;</a></p>
 
                         </div>
                     </div>
