--- a/examples/viewbrowsermap.html
+++ b/examples/viewbrowsermap.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="../node_modules/openlayers/css/ol.css" type="text/css">
+    <link rel="stylesheet" href="../node_modules/openlayers/dist/ol.css" type="text/css">
     <style>
         .ol-zoom {
           top: 52px;
@@ -31,7 +31,8 @@
         }
     </style>
     <script src="../node_modules/openlayers/dist/ol.js" type="text/javascript"></script>
-    <title>OpenLayers map preview</title>
+    <script src="../dist/gsc.js" type="text/javascript"></script>
+    <title>GSC map preview</title>
   </head>
   <body>
     <div id="map">
@@ -41,76 +42,26 @@
         <div id="scale">
     </div>
     <script type="text/javascript">
-      var pureCoverage = false;
-      // if this is just a coverage or a group of them, disable a few items,
-      // and default to jpeg format
-      var format = 'image/png';
-      var bounds = [1618102.37, 4942652.95,
-                    1640661.9, 4959185];
-
-      var mousePositionControl = new ol.control.MousePosition({
-        className: 'custom-mouse-position',
-        target: document.getElementById('location'),
-        coordinateFormat: ol.coordinate.createStringXY(5),
-        undefinedHTML: '&nbsp;'
-      });
       var untiled = new ol.layer.Image({
         source: new ol.source.ImageWMS({
           ratio: 1,
           url: 'http://hub.geosmartcity.eu/geoserver/reggio_emilia/wms',
-          params: {'FORMAT': format,
+          params: {'FORMAT': 'image/png',
                    'VERSION': '1.1.1',  
                 LAYERS: 'reggio_emilia:edifici',
                 STYLES: '',
           }
         })
       });
-      var tiled = new ol.layer.Tile({
-        visible: false,
-        source: new ol.source.TileWMS({
-          url: 'http://hub.geosmartcity.eu/geoserver/reggio_emilia/wms',
-          params: {'FORMAT': format, 
-                   'VERSION': '1.1.1',
-                   tiled: true,
-                LAYERS: 'reggio_emilia:edifici',
-                STYLES: '',
-          }
-        })
+      
+      var map = new gsc.map.Map('map',{
+    	  layers : [untiled],
+    	  epsg: "EPSG:3003",
+    	  bounds: [1618102.37, 4942652.95, 1640661.9, 4959185],
+    	  units: 'm'
       });
-      var projection = new ol.proj.Projection({
-          code: 'EPSG:3003',
-          units: 'm',
-          axisOrientation: 'neu'
-      });
-      var map = new ol.Map({
-        controls: ol.control.defaults({
-          attribution: false
-        }).extend([mousePositionControl]),
-        target: 'map',
-        layers: [
-          untiled,
-          tiled
-        ],
-        view: new ol.View({
-           projection: projection
-        })
-      });
-      map.getView().on('change:resolution', function(evt) {
-        var resolution = evt.target.get('resolution');
-        var units = map.getView().getProjection().getUnits();
-        var dpi = 25.4 / 0.28;
-        var mpu = ol.proj.METERS_PER_UNIT[units];
-        var scale = resolution * mpu * 39.37 * dpi;
-        if (scale >= 9500 && scale <= 950000) {
-          scale = Math.round(scale / 1000) + "K";
-        } else if (scale >= 950000) {
-          scale = Math.round(scale / 1000000) + "M";
-        } else {
-          scale = Math.round(scale);
-        }
-        document.getElementById('scale').innerHTML = "Scale = 1 : " + scale;
-      });
-      map.getView().fit(bounds, map.getSize());
+      map.addMousePositionControl('location');
+      map.addScaleBarControl('scale');
     </script>
   </body>
 </html>
