--- a/examples/viewbrowsermap.html
+++ b/examples/viewbrowsermap.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="../node_modules/openlayers/dist/ol.css" type="text/css">
+    <link rel="stylesheet" href="../dist/styles.css" type="text/css">
     <style>
         .ol-zoom {
           top: 52px;
@@ -30,7 +30,6 @@
             float: right;
         }
     </style>
-    <script src="../node_modules/openlayers/dist/ol.js" type="text/javascript"></script>
     <script src="../dist/gsc.js" type="text/javascript"></script>
     <title>GSC map preview</title>
   </head>
