feature map update

--- a/examples/index.html
+++ b/examples/index.html
@@ -48,7 +48,7 @@
                         </div>
                         <div class="panel-body">
                             <p>The module is part of enclosing gsc-client library and provides capabilities for viewing maps and the classic pan and zoom functions</p>
-                            <p><a class="btn btn-default" href="viewbrowsermap.html" role="button">Link to example &raquo;</a></p>
+                            <p><a class="btn btn-default" href="map/map.html" role="button">Link to example &raquo;</a></p>
 
                         </div>
                     </div>
@@ -60,7 +60,7 @@
                         </div>
                         <div class="panel-body">
                             <p>The module is part of enclosing gsc-client library and provides the components to get info on a specific feature. The user clicks on a feature in the map, the application will open a table with the detailed information on this feature.</p>
-                            <p><a class="btn btn-default" href="infoonfeature.html" role="button">Link to example &raquo;</a></p>
+                            <p><a class="btn btn-default" href="map/infoonfeature.html" role="button">Link to example &raquo;</a></p>
 
                         </div>
                     </div>
@@ -72,7 +72,7 @@
                         </div>
                         <div class="panel-body">
                             <p>The module is part of enclosing gsc-client library and provides the components to make request that filter features on specific attributes.</p>
-                            <p><a class="btn btn-default" href="filteronattributes.html" role="button">Link to example &raquo;</a></p>
+                            <p><a class="btn btn-default" href="map/filterOnAttributes.html" role="button">Link to example &raquo;</a></p>
 
                         </div>
                     </div>
