--- a/examples/map/filterOnAttributes.html
+++ b/examples/map/filterOnAttributes.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Filter on attributes</title>
+    <link href="../../node_modules/openlayers/dist/ol.css" rel="stylesheet">
+    <script src="../../node_modules/openlayers/dist/ol.js"></script>
+
+    <script src="../../node_modules/jquery.1/node_modules/jquery/dist/jquery.js"></script>
+
     <link href="../../dist/styles.css" rel="stylesheet">
     <script src="../../dist/gsc.js"></script>
     <style>
