--- a/test/cs/index.html
+++ b/test/cs/index.html
@@ -5,13 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEST alert event functionality</title>
     <script src="../../src/gsc.js" type="text/javascript"></script>
-    <script src="../../node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="../../node_modules/jquery.1/node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
     <script src="../../src/cs/cs.js" type="text/javascript"></script>
 
     <script>
-        // initialize cs object
-        gsc.cs.url = 'http://geo.mapshakers.com:8080/CrowdSourcing';
-
         // callback function which catch the error or print the results to a console
         function print(err,data){
             if (err){
@@ -48,25 +45,38 @@
 
         /** LIBRARY FUNCTIONS **/
         function getConfig() {
-            gsc.cs.getConfig(print);
+
+            var promise = gsc.cs.getConfig();
+            promise.done(function(data){
+                print(null, data);
+            }).fail(function(err){
+                print(err,null);
+            });
+
         }
 
 
         function eventComment(){
             var data = {
                 "user": {
-                    "id": "Filip_"+createUuidgen(),
-                    "email": "franta@nowhere.com"
+                    "id": "Filip_"+createUuidgen()
                 },
-                "text": "A new comment",
-                "datetime":getTimeStamp()
+                "text": "{'A new comment'}",
+                "datetime":getTimeStamp(),
+                'status' : 'hello'
             };
 
-            var uuid = "5ed32063-45bd-4ac2-9f68-0bf8efa38814";
-            gsc.cs.eventComment(print,data,uuid);
+            var uuid = "1d9f1c02-de8e-4b05-8a40-a394b2b68d10";
+            gsc.cs.eventComment(data, uuid)
+                    .done(function(data){
+                        print(null, data);
+                    }).fail(function(err,string){
+                console.log(err,string);
+                print(err, null);
+            });
         }
 
-        function eventCreate1(){
+        function eventCreate1() {
 
             var data ={
                 "id":createUuidgen(),
@@ -92,7 +102,13 @@
             request.append('event', JSON.stringify(data));
             request.append('part://1', $('input[type=file]')[0].files[0]);
 
-            gsc.cs.eventCreate(print,request);
+            gsc.cs.eventCreate(request)
+                    .done(function(data){
+                        print(null, data);
+                    }).fail(function(err){
+                print(err, null);
+            });
+
         }
 
         function eventCreate2(){
@@ -126,7 +142,12 @@
             request.append('part://1', $('input[type=file]')[0].files[0]);
             request.append('part://2', $('input[type=file]')[0].files[0]);
 
-            gsc.cs.eventCreate(print,request);
+            gsc.cs.eventCreate(request)
+                    .done(function(data){
+                        print(null, data);
+                    }).fail(function(err){
+                print(err, null);
+            });
         }
 
 
@@ -143,7 +164,12 @@
                 }
             };
 
-            gsc.cs.eventListFilter(print,data);
+            gsc.cs.eventListFilter(data)
+                    .done(function(res){
+                        print(null,res)
+                    }).fail(function(err){
+                print(err,null)
+            });
         }
 
 
@@ -155,7 +181,12 @@
                 }
             };
 
-            gsc.cs.eventListFilter(print,data);
+            gsc.cs.eventListFilter(data)
+                    .done(function(res){
+                        print(null,res)
+                    }).fail(function(err){
+                print(err,null)
+            });
         }
 
         function eventListFilterDateTime2(){
@@ -167,7 +198,12 @@
                 }
             };
 
-            gsc.cs.eventListFilter(print,data);
+            gsc.cs.eventListFilter(data)
+                    .done(function(res){
+                        print(null,res)
+                    }).fail(function(err){
+                print(err,null)
+            });
         }
 
         function eventListFilterDateTime3(){
@@ -178,14 +214,24 @@
                 }
             };
 
-            gsc.cs.eventListFilter(print,data);
+            gsc.cs.eventListFilter(data)
+                    .done(function(res){
+                        print(null,res)
+                    }).fail(function(err){
+                print(err,null)
+            });
         }
 
         function eventListFilterEmpty(){
 
             var data ={};
 
-            gsc.cs.eventListFilter(print,data);
+            gsc.cs.eventListFilter(data)
+                    .done(function(res){
+                        print(null,res)
+                    }).fail(function(err){
+                print(err,null)
+            });
         }
 
         function eventListFilterPriority(){
@@ -195,7 +241,12 @@
                 ]
             };
 
-            gsc.cs.eventListFilter(print,data);
+            gsc.cs.eventListFilter(data)
+                    .done(function(res){
+                        print(null,res)
+                    }).fail(function(err){
+                print(err,null)
+            });
         }
     </script>
 </head>
