--- a/examples/map/map.html
+++ b/examples/map/map.html
@@ -6,9 +6,10 @@
     <link href="../../node_modules/openlayers/dist/ol.css" rel="stylesheet">
     <script src="../../node_modules/openlayers/dist/ol.js"></script>
 
-    <script src="../../node_modules/jquery.1/node_modules/jquery/dist/jquery.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
 
-    <link href="../../dist/styles.css" rel="stylesheet">
+
+    <link href="../../dist/gsc.css" rel="stylesheet">
     <script src="../../dist/gsc.js"></script>
     <style>
         #map {
