--- a/examples/index.html
+++ b/examples/index.html
@@ -80,11 +80,11 @@
                 <div class="col-md-6">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            Example
+                            Report
                         </div>
                         <div class="panel-body">
-                            <p>Description of example</p>
-                            <p><a class="btn btn-default" href="#" role="button">Link to example &raquo;</a></p>
+                            <p>Export the viewer window to a PDF document on standard paper sizes</p>
+                            <p><a class="btn btn-default" href="report/index.html" role="button">Link to example &raquo;</a></p>
 
                         </div>
                     </div>
