--- a/examples/map/infoonfeature.html
+++ b/examples/map/infoonfeature.html
@@ -7,8 +7,10 @@
     <script src="../../node_modules/openlayers/dist/ol.js"></script>
 
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+	<script src="es6-promise.js"></script>
 
     <link href="../../dist/gsc.css" rel="stylesheet">
+
     <script src="../../dist/gsc.js"></script>
     <style>
         #map {
