--- a/examples/index.html
+++ b/examples/index.html
@@ -80,11 +80,11 @@
                 <div class="col-md-6">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            Example
+                            Comment Geofeature
                         </div>
                         <div class="panel-body">
-                            <p>Description of example</p>
-                            <p><a class="btn btn-default" href="#" role="button">Link to example &raquo;</a></p>
+                            <p>The module is part of enclosing gsc-client library and provides the components to make comments about layers added's features to the map.</p>
+                            <p><a class="btn btn-default" href="Geocomment/index.html" role="button">Link to example &raquo;</a></p>
 
                         </div>
                     </div>
