--- a/examples/report/index.html
+++ b/examples/report/index.html
@@ -5,7 +5,9 @@
     <!--<link rel="stylesheet" href="http://openlayers.org/en/v3.14.2/css/ol.css" type="text/css">-->
 	
 	<link href="../../node_modules/openlayers/dist/ol.css" rel="stylesheet">
-    <script src="../../node_modules/openlayers/dist/ol.js"></script>
+    <!--<script src="../../node_modules/openlayers/dist/ol.js"></script>-->
+	<script src="http://openlayers.org/en/v3.15.0/build/ol.js"></script>
+	<!--<script src="http://openlayers.org/en/v3.17.1/build/ol-debug.js"></script>-->
 	<script src="../../node_modules/jspdf/dist/jspdf.debug.js"></script>	
 	<!--<script src="jspdf.plugin.cell.js"></script>	-->
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
@@ -97,7 +99,7 @@
 		},
 		{
 			type: gsc.ReportConst.ObjectType.Text,
-			data: new Date().toLocaleDateString(),
+			data: new Date().toLocaleDateString().replace(/[^ -~]/g,''),
 			vAlign:gsc.ReportConst.VerticalAlign.Bottom,
 			hAlign:gsc.ReportConst.HorizontalAlign.Right,
 			size:12
