--- a/test/user/gsc_user.test.html
+++ b/test/user/gsc_user.test.html
@@ -1,53 +1,82 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>User tests</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../..node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
-    <script src="../../dist/gsc.js" type="text/javascript"></script>
-    <script>
-    jQuery('document').ready(function() {
+    <head>
+        <title>User tests</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="../..node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
+        <link href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="../../node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
+        <style>
+            #loginForm {
+                width: 250px;
+                height: auto;
+                padding: 10px;
+                border: 1px solid black;
+            }
 
-      console.log(gsc);
+            #registrationForm {
+                width: 300px;
+                height: auto;
+                padding: 10px;
+                border: 1px solid red;
+            }
+        </style>
+        <script src="../../node_modules/jquery.1/node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
+        <script src="../../dist/gsc.js" type="text/javascript"></script>
+        <script>
+            jQuery('document').ready(function() {
 
-      // Register a user
-      gsc.user.register('runarbe@gmail.com', 'runarbe2', 'pwd', 'pwd', [{'organization': 1}])
-        .then(function(res) {
+                gsc.user.loginWidget('#loginForm');
 
-          var userId = res.id;
+                gsc.user.registrationWidget('#registrationForm');
 
-          console.log(res.description);
-          console.log(userId);
+                // Register a user
+                gsc.user.register('runarbe@gmail.com', 'runarbe2', 'pwd', 'pwd', [{
+                        'organization': 1
+                    }])
+                    .then(function(res) {
 
-          // Update user
-          gsc.user.update(userId, 'runarbe@gmail.com', 'runarbe2', [{'organization': 1}])
-            .then(function(res) {
+                        var userId = res.id;
 
-              console.log(res.description);
+                        console.log(res.description);
+                        console.log(userId);
 
-              // Login with newly created account
-              gsc.user.login('runarbe2', 'pwd').then(function(res) {
-                console.log(res.description);
+                        // Update user
+                        gsc.user.update(userId, 'runarbe@gmail.com', 'runarbe2', [{
+                                'organization': 1
+                            }
+                        ])
+                            .then(function(res) {
 
-                  // Delete user
-                  gsc.user.delete('runarbe2', 'pwd').then(function(res) {
-                    console.log(res.description);
-                  });
+                                console.log(res.description);
 
-              });
+                                // Login with newly created account
+                                gsc.user.login('runarbe2', 'pwd').then(function(res) {
+                                    console.log(res.description);
+
+                                    // Delete user
+                                    gsc.user.delete('runarbe2', 'pwd').then(function(res) {
+                                        console.log(res.description);
+                                    });
+
+                                });
 
 
 
-          });
+                            });
 
 
-        });
+                    });
 
-    });
-    </script>
-  </head>
-  <body>
-    <div>User tests</div>
-  </body>
+            });
+        </script>
+    </head>
+    <body>
+        <div>User tests</div>
+        <h4>Login form</h4>
+        <div id="loginForm"></div>
+        <h4>Registration form</h4>
+        <div id="registrationForm"></div>
+    </body>
 </html>
