--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p>&copy; 2016 GeoSmartCity Partnership - project co-funded by the European Commission</p>
       </footer>
     </div> <!-- /container -->
-    <script src="node_modules/jquery.1/node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
   </body>
 </html>
