--- a/test/user/gsc_user.test.html
+++ b/test/user/gsc_user.test.html
@@ -4,7 +4,7 @@
     <title>User tests</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../../node_modules/jquery.1/node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
+    <script src="../..node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
     <script src="../../dist/gsc.js" type="text/javascript"></script>
     <script>
     jQuery('document').ready(function() {
