--- a/test/user/gsc_user.test.html
+++ b/test/user/gsc_user.test.html
@@ -4,7 +4,6 @@
         <title>User tests</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="../..node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
         <link href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <link href="../../node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
         <style>
@@ -22,7 +21,8 @@
                 border: 1px solid red;
             }
         </style>
-        <script src="../../node_modules/jquery.1/node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
+        <script src="../../node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
+        <script src="../../node_modules/openlayers/dist/ol.js" type="text/javascript"></script>
         <script src="../../dist/gsc.js" type="text/javascript"></script>
         <script>
             jQuery('document').ready(function() {
@@ -32,8 +32,8 @@
                 gsc.user.registrationWidget('#registrationForm');
 
                 // Register a user
-                gsc.user.register('runarbe@gmail.com', 'runarbe2', 'pwd', 'pwd', [{
-                        'organization': 1
+                gsc.user.register('abc@def.com', 'abc2', 'pwd', 'pwd', [{
+                        'organization': 1265
                     }])
                     .then(function(res) {
 
@@ -43,8 +43,8 @@
                         console.log(userId);
 
                         // Update user
-                        gsc.user.update(userId, 'runarbe@gmail.com', 'runarbe2', [{
-                                'organization': 1
+                        gsc.user.update(userId, 'abc@def.com', 'abc2', [{
+                                'organization': 1265
                             }
                         ])
                             .then(function(res) {
@@ -52,11 +52,12 @@
                                 console.log(res.description);
 
                                 // Login with newly created account
-                                gsc.user.login('runarbe2', 'pwd').then(function(res) {
+                                gsc.user.login('abc2', 'pwd').then(function(res) {
                                     console.log(res.description);
 
                                     // Delete user
-                                    gsc.user.delete('runarbe2', 'pwd').then(function(res) {
+                                    gsc.user.delete('abc2', 'pwd').then(function(res) {
+                                        console.log('test');
                                         console.log(res.description);
                                     });
 
