--- a/examples/routing/routing.html
+++ b/examples/routing/routing.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Example of routing service using gsc.routing</title>
     <link rel="stylesheet" href="http://openlayers.org/en/v3.16.0/css/ol.css" type="text/css">
+    <script src="../../node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <script src="http://openlayers.org/en/v3.16.0/build/ol.js" type="text/javascript"></script>
     <link href="../../dist/gsc.css" rel="stylesheet">
     <script src="../../dist/gsc.js"></script>
