repair cs  test

--- a/test/cs/index.html
+++ b/test/cs/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEST alert event functionality</title>
     <script src="../../src/gsc.js" type="text/javascript"></script>
-    <script src="../..node_modules/jquery/dist/jquery.js" type="text/javascript"></script>
+    <script src="../../node_modules/jquery/dist/jquery.js"
+            type="text/javascript"></script>
     <script src="../../src/cs/cs.js" type="text/javascript"></script>
 
     <script>
